--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-dj-database-url>=0.4.2
-Django>=2.1.1
-django-debug-toolbar>=1.9.1
-django-filter>=2.0.0
-djangorestframework>=3.8.2
-djangorestframework-datatables>=0.4.0
-Markdown>=2.6.11
-python-decouple>=3.1
-sqlparse>=0.2.4
+dj-database-url==0.5.0
+Django==2.2.5
+django-debug-toolbar==2.0
+django-filter==2.2.0
+djangorestframework==3.10.3
+djangorestframework-datatables==0.5.0
+Markdown==3.1.1
+pkg-resources==0.0.0
+psycopg2-binary==2.8.3
+python-decouple==3.1
+pytz==2019.2
+sqlparse==0.3.0
