--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ django-debug-toolbar==2.0
 django-filter==2.2.0
 djangorestframework==3.10.3
 djangorestframework-datatables==0.5.0
+djangorestframework-jwt==1.11.0
 Markdown==3.1.1
 pkg-resources==0.0.0
 psycopg2-binary==2.8.3
+PyJWT==1.7.1
 python-decouple==3.1
 pytz==2019.2
 sqlparse==0.3.0
